# PsyAssist

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  env.example  psyassist_cli.py  pyproject.toml  requirements.txt  run.py  test_basic.py
.cursor/: context.md
psyassist/: __init__.py  cli.py
psyassist/agents/: __init__.py  base_agent.py  empathy.py  escalation.py  greeter.py  resource.py  risk_assessment.py  therapy_guide.py
psyassist/api/: __init__.py  main.py
psyassist/config/: __init__.py  prompts.py  safety.py  settings.py
psyassist/core/: __init__.py  orchestrator.py  session_manager.py  state_machine.py
psyassist/schemas/: __init__.py  events.py  resources.py  risk.py  session.py
psyassist/tools/: __init__.py  directory_lookup.py  hotline_router.py  pii_redactor.py  risk_classifier.py  warm_transfer.py
